--- a/frontend/src/components/footer.css
+++ b/frontend/src/components/footer.css
@@ -8,7 +8,8 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    margin-top: 40px;
+    margin-top: auto;
+    position: relative;
 }
 
 
