--- a/frontend/src/pages/property.css
+++ b/frontend/src/pages/property.css
@@ -95,7 +95,7 @@
     justify-content: space-between;
     align-items: flex-start;
     width: 100%;
-    height: 52px;
+    height: auto;
 }
 
 /*  Cada Collapse ocupa el 50% del ancho */
