--- a/frontend/src/components/banner.css
+++ b/frontend/src/components/banner.css
@@ -53,3 +53,38 @@
     border-radius: 25px;
     z-index: 1;
 }
+
+/***** MEDIA MOBILE *****/
+
+@media screen and (max-width: 768px) {
+    .banner {
+        width: 335px;
+        height: 111px;
+        border-radius: 10px;
+        margin: 20px auto;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+    }
+
+    .banner-img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 10px;
+    }
+
+    .banner::after {
+        border-radius: 10px;
+    }
+
+    .banner-title {
+        font-size: 24px;
+        padding-left: 16px;
+        padding-right: 16px;
+        max-width: 225px;
+        line-height: 28px;
+        text-align: left;
+    }
+}
