--- a/frontend/src/components/footer.css
+++ b/frontend/src/components/footer.css
@@ -1,5 +1,6 @@
 .footer {
-    width: 1440px;
+    width: 100vw;
+    max-width: 100%;
     height: 209px;
     background-color: black;
     color: white;
@@ -16,4 +17,19 @@
 .footer-text {
     font-size: 18px;
     font-weight: 400;
+}
+
+/***** MEDIA *****/
+@media screen and (max-width: 768px) {
+    .footer-text {
+        font-size: 13px;
+        font-weight: 500;
+        width: 133px;
+        height: 46px;
+    }
+
+    .footer-logo {
+        width: 122px;
+        height: 39px;
+    }
 }
