projet complet sans tests

--- a/frontend/src/pages/notfound.css
+++ b/frontend/src/pages/notfound.css
@@ -33,7 +33,7 @@
     height: 51px;
 }
 
-/* Lien "Retourner sur la page d’accueil" */
+/* Lien */
 .notfound-link {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
