--- a/frontend/src/components/collapse.css
+++ b/frontend/src/components/collapse.css
@@ -6,7 +6,6 @@
     margin: 20px auto;
 }
 
-/* Estilo del encabezado del Collapse */
 .collapse-header {
     background-color: #ff6060;
     color: white;
@@ -21,16 +20,6 @@
     height: 52px;
 }
 
-/* Flecha de despliegue */
-.arrow {
-    transition: transform 0.3s ease-in-out;
-}
-
-.arrow.open {
-    transform: rotate(180deg);
-}
-
-/* Contenido del Collapse */
 .collapse-content {
     background-color: #F6F6F6;
     padding: 15px 20px;
@@ -40,15 +29,23 @@
 }
 
 .arrow {
-    display: inline-block;
-    width: 15px;
-    height: 15px;
-    border-left: 4px solid white;
-    border-bottom: 4px solid white;
-    transform: rotate(-45deg);
+    width: 24px;
+    /* ajusta según el tamaño de tu SVG */
+    height: auto;
     transition: transform 0.3s ease-in-out;
+    transform: rotate(0deg);
+    /* pointe vers le haut par défaut */
 }
 
 .arrow.open {
-    transform: rotate(135deg);
+    transform: rotate(180deg);
+}
+
+/***** MEDIA *****/
+
+@media screen and (max-width: 768px) {
+    .arrow {
+        width: 16px;
+        height: 9px;
+    }
 }
