--- a/frontend/src/components/slideshow.css
+++ b/frontend/src/components/slideshow.css
@@ -19,10 +19,8 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    background-color: transparent;
-    color: white;
+    background: none;
     padding: 15px;
-    font-size: 50px;
 }
 
 .prev {
