--- a/frontend/src/components/card.css
+++ b/frontend/src/components/card.css
@@ -12,18 +12,17 @@
     object-fit: cover;
 }
 
-.card-overlay {
+.card-gradient {
     position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 50%;
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.7), transparent);
-    display: flex;
-    align-items: flex-end;
-    padding: 15px;
-    color: white;
-    font-weight: bold;
+    inset: 0;
+    background: linear-gradient(180deg,
+            rgba(255, 255, 255, 0) 0%,
+            rgba(10, 10, 10, 0) 42%,
+            rgba(4, 4, 4, 0.205) 99.99%,
+            rgba(0, 0, 0, 0.5) 100%);
+    z-index: 1;
 }
+
 
 .card-title {
     position: absolute;
@@ -32,4 +31,5 @@
     color: white;
     font-size: 18px;
     font-weight: bold;
+    z-index: 2;
 }
